--- a/write_message.html
+++ b/write_message.html
@@ -21,8 +21,9 @@
 
                 </div>
           </fieldset>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
-                </div>
-
+                  <div class="form-group">
+                      {{ form.submit(class="btn btn-outline-info") }}
+                  </div>
+            </form>
+        </div>
 {% endblock content %}
